--- a/Frontend Mentor/Sunnyside Agency/style.css
+++ b/Frontend Mentor/Sunnyside Agency/style.css
@@ -94,9 +94,9 @@ html, body {
   font-family: "Fraunces", serif;
   text-transform: uppercase;
   text-align: center;
-  font-size: 3em;
+  font-size: 2.4em;
   letter-spacing: 0.2em;
-  margin: 1.2em 0 1em 0;
+  margin: 2em 0 1.2em 0;
 }
 .hero .arrow-icon {
   position: relative;
@@ -337,7 +337,7 @@ footer .attribution a {
   }
   .hero h1 {
     font-size: 4em;
-    margin: 2em 0 1.6em 0;
+    margin: 1.4em 0 1.2em 0;
   }
 
   .brand-showcase {
@@ -353,7 +353,7 @@ footer .attribution a {
     padding: 8% 8%;
   }
   .brand-showcase .blurb-card h2 {
-    font: 1em;
+    font-size: 2em;
     margin-bottom: 0.6em;
   }
   .brand-showcase .blurb-card .blurb {
@@ -381,6 +381,7 @@ footer .attribution a {
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    height: 100vh;
     padding: 3%;
   }
   .hero .hamburger-icon {
@@ -418,5 +419,27 @@ footer .attribution a {
   .hero nav .contact a:hover {
     background: #fad400;
     transition: all 200ms ease;
+  }
+  .hero h1 {
+    margin: 3em 0 1.6em 0;
+  }
+
+  .brand-showcase {
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    grid-template-areas: "transform transform-img" "stand-out-img stand-out";
+  }
+  .brand-showcase .blurb-card {
+    padding: 20% 19%;
+  }
+  .brand-showcase .blurb-card h2 {
+    font-size: 3.5em;
+  }
+  .brand-showcase .blurb-card .blurb {
+    font-size: 1.4em;
+    margin-bottom: 3em;
+  }
+  .brand-showcase .blurb-card a {
+    font-size: 1.4em;
   }
 }
