--- a/Frontend Mentor/Sunnyside Agency/style.css
+++ b/Frontend Mentor/Sunnyside Agency/style.css
@@ -442,4 +442,14 @@ footer .attribution a {
   .brand-showcase .blurb-card a {
     font-size: 1.4em;
   }
+
+  .service-card .service-text {
+    padding: 0 28%;
+  }
+  .service-card .service-text .service {
+    font-size: 2.5em;
+  }
+  .service-card .service-text .service-info {
+    font-size: 1.2em;
+  }
 }
