--- a/Frontend Mentor/Sunnyside Agency/style.scss
+++ b/Frontend Mentor/Sunnyside Agency/style.scss
@@ -558,6 +558,19 @@ footer {
         }    
     }
 
+    
+    .service-card .service-text {
+            padding: 0 28%;
+
+            .service {
+                font-size: 2.5em;
+            }
+        
+            .service-info {
+                font-size: 1.2em;
+            }
+    }
+
 }
     
 
