--- a/Frontend Mentor/Sunnyside Agency/style.scss
+++ b/Frontend Mentor/Sunnyside Agency/style.scss
@@ -599,6 +599,10 @@ footer {
         li {
             font-size: 1.4em;
         }
+        
+        a:hover {
+            color: #fff;
+        }
 
     }
 
