--- a/Frontend Mentor/Tip Calculator App/style.css
+++ b/Frontend Mentor/Tip Calculator App/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;500;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -10,6 +11,101 @@ html, body {
 
 body {
   background-color: #c5e4e7;
+  min-height: 100%;
+  font-family: "Space Mono", monospace;
+  font-weight: 500;
+}
+
+header {
+  width: 100%;
+}
+header #logo {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 2.5em 0;
+}
+
+main {
+  background: #fff;
+  width: 100%;
+  border-radius: 1.5em 1.5em 0 0;
+  padding: 8%;
+}
+
+label {
+  color: #5e7a7d;
+  margin-bottom: 5em;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+  width: 100%;
+  padding: 0.5em 0.6em;
+  text-align: right;
+  background: #f4fafa;
+  border: none;
+  border-radius: 5px;
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+  font-size: 1.2em;
+  color: #00494d;
+}
+input[type=number]::placeholder {
+  color: #7f9c9f;
+  opacity: 0.7;
+}
+input[type=number] :-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #00494d;
+}
+input[type=number]:focus {
+  outline: none;
+}
+input[type=number]:focus::placeholder {
+  color: transparent;
+}
+
+#bill-total {
+  background: url(img/icon-dollar.svg) left 5% center no-repeat, #f4fafa;
+}
+
+.tip-values {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0.8em;
+}
+
+button {
+  background: #00494d;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  padding: 0.2em 0.5em;
+  font-size: 1.5em;
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+}
+
+.customTip {
+  width: auto;
+  color: #00494d;
+}
+.customTip::placeholder {
+  color: #000;
+}
+
+.customTip::placeholder {
+  color: #000;
 }
 
 .attribution {
