--- a/Frontend Mentor/Tip Calculator App/style.css
+++ b/Frontend Mentor/Tip Calculator App/style.css
@@ -30,12 +30,13 @@ main {
   background: #fff;
   width: 100%;
   border-radius: 1.5em 1.5em 0 0;
-  padding: 8%;
+  padding: 8% 8% 25% 8%;
 }
 
 label {
+  display: inline-block;
   color: #5e7a7d;
-  margin-bottom: 5em;
+  margin-bottom: 0.3em;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -58,6 +59,7 @@ input[type=number] {
   font-weight: 700;
   font-size: 1.2em;
   color: #00494d;
+  margin-bottom: 1.5em;
 }
 input[type=number]::placeholder {
   color: #7f9c9f;
@@ -78,11 +80,16 @@ input[type=number]:focus::placeholder {
   background: url(img/icon-dollar.svg) left 5% center no-repeat, #f4fafa;
 }
 
+#num-people {
+  background: url(img/icon-person.svg) left 5% center no-repeat, #f4fafa;
+}
+
 .tip-values {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 0.8em;
+  margin-bottom: 1.5em;
 }
 
 button {
@@ -96,20 +103,51 @@ button {
   font-weight: 700;
 }
 
-.customTip {
-  width: auto;
+#customTip {
+  width: 100%;
+  color: #00494d;
+  margin-bottom: 0;
+}
+#customTip::placeholder {
   color: #00494d;
 }
-.customTip::placeholder {
-  color: #000;
+
+.calculations {
+  margin-top: 0.2em;
+  background: #00494d;
+  border-radius: 0.8em;
+  padding: 2em 1.4em 1.4em 1.4em;
+  color: #fff;
+}
+.calculations span {
+  opacity: 0.6;
+  font-size: 0.8em;
+  font-weight: 700;
 }
 
-.customTip::placeholder {
-  color: #000;
+input[type=reset] {
+  width: 100%;
+  background: #26c0ab;
+  border: none;
+  border-radius: 0.3em;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #00494d;
+  font-family: "Space Mono", monospace;
+  font-size: 1.5em;
+  padding: 0.3em 0;
+}
+
+footer {
+  position: relative;
 }
 
 .attribution {
   font-size: 11px;
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  font-size: 0.6em;
   text-align: center;
 }
 .attribution a {
