--- a/Frontend Mentor/Tip Calculator App/style.css
+++ b/Frontend Mentor/Tip Calculator App/style.css
@@ -103,13 +103,19 @@ button {
   font-weight: 700;
 }
 
-#customTip {
+#custom-tip {
   width: 100%;
   color: #00494d;
   margin-bottom: 0;
 }
-#customTip::placeholder {
+#custom-tip::placeholder {
   color: #00494d;
+}
+#custom-tip:focus {
+  outline: none;
+}
+#custom-tip:focus::placeholder {
+  color: transparent;
 }
 
 .calculations {
